--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>este es un comentario de pureba</h1>
-    <h2>probando probando</h2>
+    <h2>de nuevo probando</h2>
 </body>
 </html>
